# Find_seed_generator

./: Cargo.toml  build.rs
src/: color.rs  data.rs  main.rs
