[package]
name = "Find_seed_generator"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rustils="0.1.23"

#цветной вывод в консоль
console = "0.15.7"

tiny-bip39 = "1.0.0"

#это нужно для иконки в винде
[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

#Минимизирует размер кода
[profile.release]
opt-level = 3